Fix mobile issue

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: rgba(0, 0, 0, 0.822);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .container {
@@ -12,10 +12,9 @@ body {
     'card card card card card'
     '. . dropdown . .'
     'charts charts charts charts charts';
-  align-content: center;
   padding: 0% 0%;
-  align-items: center;
   align-content: center;
+  align-items: center;
 }
 
 .dropdown {
@@ -58,15 +57,16 @@ body {
 @media (max-width: 650px) {
   .container {
     grid-template-areas:
-      /* 'card'
+      'card'
       'dropdown'
-      'charts'; */
-      '. . card . .'
+      'charts';
+    /* '. . card . .'
       '. . dropdown . .'
-      '. charts charts charts .';
+      'charts charts charts charts charts'; */
   }
   .charts {
-    margin: 10%;
+    margin: 0% !important;
+    
   }
   .card {
     margin: 0% 10%;
