--- a/src/components/Cards.module.css
+++ b/src/components/Cards.module.css
@@ -2,6 +2,12 @@
   margin: 50px 0;
 }
 
+.countryName{
+  display: flex;
+  flex-direction: column;
+  color: #505050;
+}
+
 .card {
   margin: 0 2% !important;
   border: 5px solid #dec79b;
