Added bottom margin on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@ body {
     margin: 10% 35% 0% 35% !important;
   }
   .charts {
-    margin: 0% !important;
+    margin: 0% 0% 20% 0% !important;
     /* margin:0% 20% 5% 20%; */
   }
   .card {
